--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "my-turborepo",
+  "name": "saas",
   "private": true,
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
-    "prettier": "^3.6.0",
-    "turbo": "^2.5.4",
-    "typescript": "5.8.2"
+    "turbo": "^2.5.4"
   },
   "packageManager": "pnpm@9.0.0",
   "engines": {
